--- a/references.bib
+++ b/references.bib
@@ -42,6 +42,18 @@
   Publisher                = {Springer}
 }
 
+@Article{Abrahamson_2008_ES,
+  Title                    = {Summary of the {A}brahamson \& {S}ilva {NGA} Ground-Motion Relations},
+  Author                   = {Abrahamson, N. A. and Silva, W.},
+  Journal                  = ES,
+  Year                     = {2008},
+  Number                   = {1},
+  Pages                    = {67--97},
+  Volume                   = {24},
+
+  Doi                      = {10.1193/1.2924360}
+}
+
 @Article{Ahmadi2013,
   Title                    = {An Overview of Seismic Hazard of {Q}azvin City and Comparison with {I}ranian Code of Practice for Resistant Design of Buildings},
   Author                   = {Ahmadi Comijany, Nasser and Fard, Abbas Atapur and Pourkermani, Mohsen},
@@ -204,13 +216,14 @@
   Timestamp                = {2016.01.10}
 }
 
-@Article{Berberian1976,
+@InCollection{Berberian1976,
   Title                    = {On the evidence of the youngest activity of the {N}orth {T}abriz {F}ault and the seismicity of {T}abriz city},
   Author                   = {Berberian, M and Arshadi, S},
-  Journal                  = {Geol.~Surv.~Iran},
+  Booktitle                = {Contributions to the Seismotectonics of Iran (Part II)},
+  Publisher                = {Ministry of Industry and Mines, Geological Survey of Iran, Report No.~39},
   Year                     = {1976},
-  Pages                    = {397--418},
-  Volume                   = {39}
+  Editor                   = {Berberian, M.},
+  Pages                    = {397--418}
 }
 
 @Article{Berberian2001,
@@ -422,6 +435,18 @@
   Volume                   = {8},
 
   Doi                      = {10.1108/09653569910258174}
+}
+
+@Article{Ghasemi_2009_JS,
+  Title                    = {An empirical spectral ground-motion model for {I}ran},
+  Author                   = {Ghasemi, H and Zare, M. and Fukushima, Y. and Koketsu, K.},
+  Journal                  = {Journal of Seismology},
+  Year                     = {2009},
+  Number                   = {4},
+  Pages                    = {499--515},
+  Volume                   = {13},
+
+  Doi                      = {10.1007/s10950-008-9143-x}
 }
 
 @InProceedings{Ghodrati2008,
@@ -877,8 +902,20 @@
   Address                  = {San Francisco, United States}
 }
 
-@Article{Scherbaum2009,
-  Title                    = {Model selection in seismic hazard analysis: An information-theoretic perspective},
+@Article{Scherbaum_2004_BSSA,
+  Title                    = {On the use of response spectral-reference data for the selection of ground-motion models for seismic hazard analysis: {T}he case of rock motion},
+  Author                   = {Scherbaum, F. and Cotton, F. and Smith, P.},
+  Journal                  = {Bulletin of the Seismological Society of America},
+  Year                     = {2004},
+  Number                   = {6},
+  Pages                    = {2164--2185},
+  Volume                   = {94},
+
+  Doi                      = {10.1785/0120030147}
+}
+
+@Article{Scherbaum_2009_BSSA,
+  Title                    = {Model selection in seismic hazard analysis: {A}n information-theoretic perspective},
   Author                   = {Scherbaum, Frank and Delavaud, Elise and Riggelsen, Carsten},
   Journal                  = {Bulletin of the Seismological Society of America},
   Year                     = {2009},
@@ -886,9 +923,8 @@
   Pages                    = {3234--3247},
   Volume                   = {99},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2015.08.24}
+  Doi                      = {10.1785/0120080347},
+  Publisher                = {Seismological Society of America}
 }
 
 @Article{Shahvar2013,
