--- a/attenuation.tex
+++ b/attenuation.tex
@@ -1,3 +1,84 @@
 
 \section{Attenuation Relationship}
 
+The last piece in our hazard analysis process is the choice of an adequate attenuation relationship, or ground motion prediction equation (GMPE). This is a highly influential factor because it controls the spatial extent to which the local occurrence of earthquakes can influence regional hazard. 
+
+Recently, \citet{Zafarani2014} investigated the predictive capabilities of a set of nine local, regional, and next generation attenuation (NGA) GMPEs to determine their applicability for northern Iran. They evaluated GMPE predictions against data from 32 earthquakes of magnitudes $M_w$ ranging between 4.7 and 7.4. This included comparisons of PGA and response spectral accelerations (SA) computed from time-series recorded on 163 stations located at epicentral distances of up to 200 km. The evaluation was done using the likelihood (LH) and log-likelihood (LLH) methods of \citet{Scherbaum_2004_BSSA, Scherbaum_2009_BSSA}. The combined evaluation for PGA, and SA for seven periods (T) between 0.1 and 2.0 s, yielded that the best overall predictions were those of the GMPEs introduced by \citet{Ghasemi_2009_JS}, \citet{Abrahamson_2008_ES}, and \citet{Chiou2008}. For the specific case of PGA ($T=0$ s), however, the best results were those obtained with the GMPEs introduced by \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}.
+
+Since our hazard analysis here focuses on PGA values, we concentrated our attention in the last set of GMPEs. In comparisons not shown here for brevity, we found that these GMPEs yielded mean predictions that were very close to each other. Furthermore, based on the LLH coefficients reported by \citet{Zafarani2014}, and using the approached of \citet{Scherbaum_2009_BSSA}, we found that a logic-tree analysis lead to weights of 0.3376, 0.3354, and 0.3270 for \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}, respectively. These results meant that neither of them had a substantial advantage over the others. 
+
+Based on this, we selected the GMPE proposed by \citet{Kalkan2004} for our analysis. This equation is of the form
+% 
+\begin{align}
+	\ln \left( Y \right) =
+		& \hspace{1ex} b_1 + b_2(M_w - 6) + b_3 \left( M_w - 6 \right)^{2} \nonumber \\ 
+		& + b_5 \ln \left( r \right) + b_V \ln \left( V_S / V_A \right)
+	\, ,
+\end{align}
+% 
+where $Y$ is a ground motion parameter (here representing PGA), $V_A$ is a reference velocity in m/s, $V_S$ is the shear wave velocity of the site of interest, and the distance $r$ is given by
+% 
+\begin{equation}
+	r= \sqrt{ r^2_{\mathit{cl}} + h^2 }
+	\, .
+\end{equation}
+% 
+where $r_{\mathit{cl}}$ is the horizontal distance to the site of interest and $h$ is a reference fictitious depth, both given in km. According to \citet{Kalkan2004}, in the case of $Y$ representing PGA, the coefficients $b_1$, $b_2$, $b_3$, $b_5$ and $b_V$ are
+% 
+\begin{equation}
+\begin{array}{lcrlcr} 
+	b_1 &=&  0.393   \,,&\hspace{2em}   b_2 &=& 0.576\,,   \\
+	b_3 &=& -0.107   \,,&\hspace{2em}   b_5 &=& -0.899\,,  \\
+	b_V &=& -0.200   \,; 
+	\nonumber
+\end{array}
+\end{equation}
+% 
+and $V_A$, $V_S$ and $h$ are
+% 
+\begin{equation}
+\begin{array}{lcrl} 
+	V_A &=& 1,112 & \mathrm{m/s}	\\
+	V_S &=&   700 & \mathrm{m/s}	\\
+	h   &=&  6.91 & \mathrm{km}\,,
+	\nonumber
+\end{array}
+\end{equation}
+% 
+respectively. The value of $V_S$ is assumed to represent average surface rock sites.
+
+
+% *********************************************************************************************************************
+% OLD
+% *********************************************************************************************************************
+
+% The choice of the ground motion attenuation relationship, as a highly influential factor, is of a great importance in seismic hazard analysis. \citet{Zafarani2014} used 163 free-field acceleration time histories recorded at epicentral distance of up to 200 km from 32 earthquakes to investigate the predictive capabilities of the local, regional, and next generation attenuation (NGA) ground-motion prediction equations and determined their applicability for northern Iran. After evaluating different Ground Motion Prediction Equations, \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008} represented suitable performance for  PGA  with LLH (Log-Likelihood method) score of 1.54, 1.55, and 1.59. Mean of the mentioned attenuation relationships (not shown here), are very close together, especially at higher magnitude. Using \citet{Scherbaum2009} approach and \citet{Zafarani2014} coefficients we calculated the logic tree weights as 0.3376, 0.3354, and 0.3270, respectively. The epistemic uncertainty in attenuation relationship is being considered through using the logic tree approach. Having close mean value and similar logic tree weights, logic tree approach will have a minor effect in considering the epistemic uncertainty. In this study instead of using  different GMPEs we use the best model of attenuation relationship for PGA \citep{Zafarani2014} as well $\pm$ standard deviation. \\
+
+% \noindent
+% The attenuation relationship is:
+
+% \begin{equation}
+% \begin{split}
+% ln\ (Y) = b_1 + b_2(M_w-6) + b_3( M_w-6)^{2}+  \\ 
+% b_5ln\ r + b_V \ ln(V_S/V_A) \  with \  r= \sqrt{R{r^2_{cl} + h^2}}  
+% \end{split}
+% \end{equation}
+
+% *********************************************************************************************************************
+% OLDER
+% *********************************************************************************************************************
+
+% \section{Attenuation relationship}
+
+% The choice of a ground motion attenuation model is of great importance since attenuation has proven to be a highly influential factor of seismic hazard. \citet{Zafarani2014} used 163 free-field acceleration time histories recorded at epicentral distance of up to 200 km from 32 earthquakes to investigate the predictive capabilities of the local, regional, and next generation attenuation (NGA) ground-motion prediction equations and determined their applicability for northern Iran. After evaluating different Ground Motion Prediction Equations, \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008} represented suitable performance for  PGA  with LLH (Log-Likelihood method) score of 1.54, 1.55, and 1.59. Mean of the mentioned attenuation relationships (not shown here), are very close together, especially at higher magnitude. Using \citet{Scherbaum2009} approach and \citet{Zafarani2014} coefficients we calculated the logic tree weights as 0.3376, 0.3354, and 0.3270, respectively. Getting close mean values and logic tree weights, in order to consider the epistemic uncertainty, instead of using several GMPEs we use the top rank GMPE (i.e.  \citet{Kalkan2004} ) with  $\pm$ standard deviation with weight of 0.2 (for each of standard deviation branches) and 0.6 for the mean value.    \\
+
+% \noindent
+
+% The attenuation relationship is:
+
+% \begin{equation}
+% ln\ (Y) = b_1 + b_2(M_w-6) + b_3( M_w-6)^{2}+ b_5ln\ r + b_V \ ln(V_S/V_A) \  with \  r= \sqrt{R{r^2_{cl} + h^2}}  
+% \end{equation}
+
+% where $Y$ is in $g$, $b_1 = 0.393$, $b_2 = 0.576$, $b_3 = -0.107$, $b_5 = -0.899$, $b_V = -0.200$, $V_A = 1112$, $h(km) = 6.91$, $\sigma_{ln\ Y} = 0.612$.
+
