working on parameters section

--- a/analysis_parameters.tex
+++ b/analysis_parameters.tex
@@ -20,31 +20,30 @@ For each of the three seismic regions, Gutenberg-Richter parameters and maximum 
 \noindent
 \citet{Karimiparidari2013} applied the Maximum Curvature (MAXC) technique \citep{Wyss1999, Wiemer2000} by ZMap \citep{Wiemer2001} to calculate the level of completeness of instrumental part of the catalog.  Following the \citet{Karimiparidari2013}, we assume the catalog is complete for earthquakes with magnitude 4.5, 4.4, 4.5, 4.5, and 4.4 for Azerbaijan, Alborz,  Kopeh-Dagh, Central Iran, and Zagros tectonic seismic regions, respectively. For the uniform model we used 4.5 as a completeness magnitude. In this study we use those magnitudes of completeness as the magnitude threshold in the calculation of the seismicity parameters. We also used the seismicity parameters of \citet{Karimiparidari2013} as the priory information in HA3 code. The updated values are displayed in Table \ref{tab:b_value}.  Annual occurrence rate of the earthquake for each region is shown in Fig.~\ref{fig:annual_m}.
 
-\begin{figure*} [!ht]
-\centering
-\includegraphics[scale=0.3]{figures/pdf/figure-04} 
-\caption{The annual probability of exceeding the specified magnitude in different seismic tectonic region (a) Alborz, b) Azerbaijan, c) Central, d) Kopeh Dagh, e) Uniform f) Zagros). The margin display the positive and negative standard deviation.}
-\label{fig:annual_m}
-\end{figure*}
+% \begin{figure*} [!ht]
+% \centering
+% \includegraphics[scale=0.3]{figures/pdf/figure-04} 
+% \caption{The annual probability of exceeding the specified magnitude in different seismic tectonic region (a) Alborz, b) Azerbaijan, c) Central, d) Kopeh Dagh, e) Uniform f) Zagros). The margin display the positive and negative standard deviation.}
+% \label{fig:annual_m}
+% \end{figure*}
+
+% \noindent
 
 
-\noindent
-
-
-\begin{table*}[!ht]
-\centering
-\caption{Seismicity parameters for three tectonic seismic regions.}
-    \begin{tabular}{ccccc}
-    ~                          &         $b-value$     &   $M_{max} $  Calculated & $M_{max}$ obseved \\ \hline
-    Azerbaijan           & 1.1   $\pm$ 0.03   &   7.93  $\pm$  0.34           &   7.7      			    \\ \hline
-    Alborz                  &1.03  $\pm$ 0.03   &   7.85  $\pm$  0.66           &   7.8          	            \\ \hline
-    Kopeh Dagh        & 0.89 $\pm$ 0.04   &   7.78  $\pm$  0.31           &   7.6          	            \\ \hline
-    Central Iran         & 0.95 $\pm$ 0.04   &   7.84  $\pm$  0.34           &   7.6                           \\ \hline
-    Zagros                 & 0.99 $\pm$ 0.02  &   7.47  $\pm$  0.26            &  7.4                            \\ \hline
-    Uniform Model    & 0.9    $\pm$ 0.02  &   7.87  $\pm$  0.26            &  7.8                            \\ 
-    \end{tabular}
- \label{tab:b_value} 
-\end{table*}
+% \begin{table*}[!ht]
+% \centering
+% \caption{Seismicity parameters for three tectonic seismic regions.}
+%     \begin{tabular}{ccccc}
+%     ~                          &         $b-value$     &   $M_{max} $  Calculated & $M_{max}$ obseved \\ \hline
+%     Azerbaijan           & 1.1   $\pm$ 0.03   &   7.93  $\pm$  0.34           &   7.7      			    \\ \hline
+%     Alborz                  &1.03  $\pm$ 0.03   &   7.85  $\pm$  0.66           &   7.8          	            \\ \hline
+%     Kopeh Dagh        & 0.89 $\pm$ 0.04   &   7.78  $\pm$  0.31           &   7.6          	            \\ \hline
+%     Central Iran         & 0.95 $\pm$ 0.04   &   7.84  $\pm$  0.34           &   7.6                           \\ \hline
+%     Zagros                 & 0.99 $\pm$ 0.02  &   7.47  $\pm$  0.26            &  7.4                            \\ \hline
+%     Uniform Model    & 0.9    $\pm$ 0.02  &   7.87  $\pm$  0.26            &  7.8                            \\ 
+%     \end{tabular}
+%  \label{tab:b_value} 
+% \end{table*}
 
 \subsection{Catalog Completness}
 
