--- a/content.tex
+++ b/content.tex
@@ -1,13 +1,13 @@
 
 \input{introduction}
 
-\input{region-of-interest}
+\input{region}
 
 \input{catalog}
 
 \input{hazard}
 
-\input{b-value}
+\input{parameters}
 
 \input{attenuation}
 
