--- a/references.bib
+++ b/references.bib
@@ -643,12 +643,16 @@
   Doi                      = {10.1785/0120150178}
 }
 
-@Unpublished{kijko2004,
-  Title                    = {Seismic Hazard Assessment for selected Area},
-  Author                   = {A. KIJKO},
+@Article{Kijko_2004_PAG,
+  Title                    = {Estimation of the Maximum Earthquake Magnitude, $m_{\max}$},
+  Author                   = {Kijko, A.},
+  Journal                  = {Pure and Applied Geophysics},
+  Year                     = {2004},
+  Number                   = {8},
+  Pages                    = {1655--1681},
+  Volume                   = {161},
 
-  Owner                    = {naeem},
-  Timestamp                = {2015.07.16}
+  Doi                      = {10.1007/s00024-004-2531-4}
 }
 
 @InProceedings{Kijko2000,
@@ -662,7 +666,7 @@
   Timestamp                = {2016.01.23}
 }
 
-@Article{Kijko1989,
+@Article{Kijko_1989_BSSA,
   Title                    = {Estimation of earthquake hazard parameters from incomplete data files. {P}art {I}. {U}tilization of extreme and complete catalogs with different threshold magnitudes},
   Author                   = {Kijko, A and Sellevoll, MA},
   Journal                  = {Bulletin of the Seismological Society of America},
@@ -671,13 +675,11 @@
   Pages                    = {645--654},
   Volume                   = {79},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2015.07.15}
+  Publisher                = {Seismological Society of America}
 }
 
-@Article{Kijko1992,
-  Title                    = {Estimation of earthquake hazard parameters from incomplete data files. Part II. Incorporation of magnitude heterogeneity},
+@Article{Kijko_1992_BSSA,
+  Title                    = {Estimation of earthquake hazard parameters from incomplete data files. {P}art {II}. {I}ncorporation of magnitude heterogeneity},
   Author                   = {Kijko, Andrzej and Sellevoll, Markvard A},
   Journal                  = {Bulletin of the Seismological Society of America},
   Year                     = {1992},
@@ -685,9 +687,7 @@
   Pages                    = {120--134},
   Volume                   = {82},
 
-  Owner                    = {naeem},
-  Publisher                = {Seismological Society of America},
-  Timestamp                = {2016.01.23}
+  Publisher                = {Seismological Society of America}
 }
 
 @Article{Klein2001,
