--- a/completeness.tex
+++ b/completeness.tex
@@ -1,24 +1,7 @@
 
-\begin{table*}[t]
-    \centering
-    \caption{Year thresholds and magnitude completeness for the seismic zones within the region of interest in this study.}
-    \begin{tabular}{lccccrc}
-    	\cline{2-7}                                              \\[-1.6ex]
-                        & 3--4 & 4--5 & 5--6 & 6--7 & 
-                                  \multicolumn{1}{c}{$>7$} &$M_c$\\[0.6ex]
-        \hline                                                   \\[-1.6ex]
-        Azerbaijan      & 1961 & 1961 & 1900 & 1581 & 1042 & 4.5 \\
-        Alborz          & 2005 & 1950 & 1900 & 1664 &--401 & 4.4 \\
-        Kopeh Dagh      & 2005 & 1950 & 1900 & 1673 &    9 & 4.5 \\
-        Zagros          & 2005 & 1961 & 1900 & 1853 & 1439 & 4.4 \\
-        Central-East    & 2005 & 1961 & 1854 & 1837 &  762 & 4.5 \\
-        Uniform Model   & 2005 & 1961 & 1900 & 1778 &--401 & 4.5 \\[0.5ex]
-        \hline 
-    \end{tabular}
-    \label{tab:params} 
-\end{table*}
-
 \subsection{Completeness}
+
+An important aspect of seismic catalogs is its completeness, which is measured both in terms of the year of completeness and the completeness magnitude. The year of completeness is evaluated for different 
 
 An important property of a seismic catalog is its completeness, which is measured both in terms of the magnitude above w....
 
@@ -52,3 +35,31 @@ According to \citet{Frankel1995}, we made plots of the cumulative number of even
 % We pick the Mw 0.5 increments in magnitude to be able to compare the results with \citet{Zare2014}. In order to be able to compare the results with \citet{Zare2014} we merge the data of Azerbaijan and Alborz seismic regions.  Fig.~\ref{fig:completness_compare_zare_2014_Az_Al} shows the completeness of catalog for earthquakes with different magnitude range in Azerbaijan-Alborz region. According to this figure, midrange magnitudes ($ 4 < Mw < 6 $) fairly obey the network developments in 1900 and 1961. The completeness thresholds for each magnitude range which are reported by \citet{Zare2014} are shown by dashed green line. 
 
 % In this study we follow the \citet{Frankel1995} approach to determine the completeness of each region. Even though the approach used by \citet{Frankel1995} will lead to the conservative results, we make sure that we don't use a period of time without knowing the complete number of events. Determining the completeness of the catalog is very sensitive to the data. Converting earthquake magnitudes from different scales to moment magnitude obviously has some error. Having broader range of magnitude will help to minimize these sort of error. In this study we consider the magnitude intervals for completeness study as $Mw = 1$. 
+
+
+\begin{figure*}[t]
+    \centering
+    \includegraphics[scale=0.28]{figures/pdf/figure-05.pdf} 
+    \caption{Pending.}
+    \label{fig:completeness}
+\end{figure*}
+
+\begin{table}[t]
+    \centering
+    \caption{Year thresholds and magnitude completeness for the seismic zones within the region of interest in this study.}
+    \begin{tabular}{@{\hspace{0.2ex}}lccccrc@{\hspace{0.2ex}}}
+        \cline{2-7}                                              \\[-1.6ex]
+                        & 3--4 & 4--5 & 5--6 & 6--7 & 
+                                  \multicolumn{1}{c}{$>7$} &$M_c$\\[0.6ex]
+        \hline                                                   \\[-1.6ex]
+        Azerbaijan      & 1961 & 1961 & 1900 & 1581 & 1042 & 4.5 \\
+        Alborz          & 2005 & 1950 & 1900 & 1664 &--401 & 4.4 \\
+        Kopeh Dagh      & 2005 & 1950 & 1900 & 1673 &    9 & 4.5 \\
+        Zagros          & 2005 & 1961 & 1900 & 1853 & 1439 & 4.4 \\
+        Central-East    & 2005 & 1961 & 1854 & 1837 &  762 & 4.5 \\
+        Uniform Model   & 2005 & 1961 & 1900 & 1778 &--401 & 4.5 \\[0.5ex]
+        \hline 
+    \end{tabular}
+    \label{tab:params} 
+\end{table}
+
