--- a/parameters.tex
+++ b/parameters.tex
@@ -1,8 +1,8 @@
 
-\begin{table*}[t]
+\begin{table}[t]
     \centering
     \caption{Seismicity parameters $b$ and $M_{\max}$ computed for the seismic zones in our region of interest and the reference uniform seismicity model along with the observed maximum magnitude, $M_{\max}^{\mathrm{obs}}$.}
-    \begin{tabular}{lccc}
+    \begin{tabular}{@{\hspace{0.2ex}}lccc@{\hspace{0.2ex}}}
         \cline{2-4}                                                                         \\[-1.6ex]
                         & $b$-value         & $M_{\max}$        & $M_{\max}^{\mathrm{obs}}$ \\[0.6ex]
         \hline                                                                              \\[-1.6ex]
@@ -15,12 +15,12 @@
         \hline 
     \end{tabular}
     \label{tab:params} 
-\end{table*}
+\end{table}
 
 \begin{figure*}[t]
     \centering
-    \includegraphics[width=\textwidth]{figures/pdf/figure-04} 
-    \caption{Annual probability of exceedance as a function of earthquake magnitude for seismic tectonic regions of (a) Alborz, (b) Azerbaijan, (c) Central Iran, (d) Kopeh Dagh, (e) Uniform (f) Zagros. The shaded range indicates the models' $\pm 1$ standard deviation.}
+    \includegraphics[width=\textwidth]{figures/pdf/figure-06} 
+    \caption{Annual probability of exceedance as a function of earthquake magnitude for the seismic zones in the region of interest. The three curves in red correspond to those seismic zones completely considered within the study area, whereas the ones in blue are the two additional contributing zones from the rest of the country. THe last curve in green corresponds to the complete region of interest, here referred to as the uniform model. The shaded range indicates the models' $\pm 1$ standard deviation.}
     \label{fig:annualp}
 \end{figure*}
 
