completed completeness and parameters sections

--- a/analysis_parameters.tex
+++ b/analysis_parameters.tex
@@ -6,13 +6,13 @@
 [Legacy text to be discussed with Naeem...]\\
 }
 
-\textcolor{blue}{
-\citet{Karimiparidari2013} applied the Maximum Curvature (MAXC) technique \citep{Wyss1999, Wiemer2000} by ZMap \citep{Wiemer2001} to calculate the level of completeness of instrumental part of the catalog.  Following the \citet{Karimiparidari2013}, we assume the catalog is complete for earthquakes with magnitude 4.5, 4.4, 4.5, 4.5, and 4.4 for Azerbaijan, Alborz,  Kopeh-Dagh, Central Iran, and Zagros tectonic seismic regions, respectively. For the uniform model we used 4.5 as a completeness magnitude. In this study we use those magnitudes of completeness as the magnitude threshold in the calculation of the seismicity parameters. We also used the seismicity parameters of \citet{Karimiparidari2013} as the priory information in HA3 code. The updated values are displayed in Table \ref{tab:b_value}.  Annual occurrence rate of the earthquake for each region is shown in Fig.~\ref{fig:annual_m}.
-}
+% \textcolor{blue}{
+% \citet{Karimiparidari2013} applied the Maximum Curvature (MAXC) technique \citep{Wyss1999, Wiemer2000} by ZMap \citep{Wiemer2001} to calculate the level of completeness of instrumental part of the catalog.  Following the \citet{Karimiparidari2013}, we assume the catalog is complete for earthquakes with magnitude 4.5, 4.4, 4.5, 4.5, and 4.4 for Azerbaijan, Alborz,  Kopeh-Dagh, Central Iran, and Zagros tectonic seismic regions, respectively. For the uniform model we used 4.5 as a completeness magnitude. In this study we use those magnitudes of completeness as the magnitude threshold in the calculation of the seismicity parameters. We also used the seismicity parameters of \citet{Karimiparidari2013} as the priory information in HA3 code. The updated values are displayed in Table \ref{tab:b_value}.  Annual occurrence rate of the earthquake for each region is shown in Fig.~\ref{fig:annual_m}.
+% }
 
-\subsection{Catalog Completness}
+% \subsection{Catalog Completness}
 
-For the smoothed seismicity method, completeness of each magnitude in the catalog is an important factor.  \citet{Frankel1995} plotted the cumulative number of events against time for different regions. He assumes that from the point that the line become linear, the catalog is complete. This approach is similar to the MAXC method of ZMAP software \citep{Wiemer2001}, where the completeness treshold is the maximum value of the first derivative of the frequency-magnitude curve. Using the cumulative frequency-magnitude distribution of \citet{Gutenberg1944} and also frequency magnitude distribution approach in software ZMAP, \citet{Zare2014} reported the catalog completeness for the study regions. World widely large earthquakes were routinely located after increasing number of seismic stations establishment in the early 1900s \citep{Shearer2009}. Up to 1961 these data formed the early instrumental period. In 1961 the Worldwide Standardized Seismograph Network (WWSSN) was stablished. The record of these seismographs considerably improved the seismic catalogs in different part of the world \citep{Shearer2009}. Fig.~\ref{fig:completness_scatter} shows the magnitude distribution of events with respect to the time of occurrence of the events.
+% For the smoothed seismicity method, completeness of each magnitude in the catalog is an important factor.  \citet{Frankel1995} plotted the cumulative number of events against time for different regions. He assumes that from the point that the line become linear, the catalog is complete. This approach is similar to the MAXC method of ZMAP software \citep{Wiemer2001}, where the completeness treshold is the maximum value of the first derivative of the frequency-magnitude curve. Using the cumulative frequency-magnitude distribution of \citet{Gutenberg1944} and also frequency magnitude distribution approach in software ZMAP, \citet{Zare2014} reported the catalog completeness for the study regions. World widely large earthquakes were routinely located after increasing number of seismic stations establishment in the early 1900s \citep{Shearer2009}. Up to 1961 these data formed the early instrumental period. In 1961 the Worldwide Standardized Seismograph Network (WWSSN) was stablished. The record of these seismographs considerably improved the seismic catalogs in different part of the world \citep{Shearer2009}. Fig.~\ref{fig:completness_scatter} shows the magnitude distribution of events with respect to the time of occurrence of the events.
 
 % \begin{figure*} [!ht]
 % \centering
@@ -21,7 +21,7 @@ For the smoothed seismicity method, completeness of each magnitude in the catalo
 % \label{fig:completness_scatter}
 % \end{figure*}
 
-According to   \citet{Frankel1995},  we made plots of the cumulative number of events against time for different regions' catalog. We pick the Mw 0.5 increments in magnitude to be able to compare the results with \citet{Zare2014}. In order to be able to compare the results with \citet{Zare2014} we merge the data of Azerbaijan and Alborz seismic regions.  Fig.~\ref{fig:completness_compare_zare_2014_Az_Al} shows the completeness of catalog for earthquakes with different magnitude range in Azerbaijan-Alborz region. According to this figure, midrange magnitudes ($ 4 < Mw < 6 $) fairly obey the network developments in 1900 and 1961. The completeness thresholds for each magnitude range which are reported by \citet{Zare2014} are shown by dashed green line. In this study we follow the \citet{Frankel1995} approach to determine the completeness of each region. Even though the approach used by \citet{Frankel1995} will lead to the conservative results, we make sure that we don't use a period of time without knowing the complete number of events. Determining the completeness of the catalog is very sensitive to the data. Converting earthquake magnitudes from different scales to moment magnitude obviously has some error. Having broader range of magnitude will help to minimize these sort of error. In this study we consider the magnitude intervals for completeness study as $Mw = 1$. 
+% According to   \citet{Frankel1995},  we made plots of the cumulative number of events against time for different regions' catalog. We pick the Mw 0.5 increments in magnitude to be able to compare the results with \citet{Zare2014}. In order to be able to compare the results with \citet{Zare2014} we merge the data of Azerbaijan and Alborz seismic regions.  Fig.~\ref{fig:completness_compare_zare_2014_Az_Al} shows the completeness of catalog for earthquakes with different magnitude range in Azerbaijan-Alborz region. According to this figure, midrange magnitudes ($ 4 < Mw < 6 $) fairly obey the network developments in 1900 and 1961. The completeness thresholds for each magnitude range which are reported by \citet{Zare2014} are shown by dashed green line. In this study we follow the \citet{Frankel1995} approach to determine the completeness of each region. Even though the approach used by \citet{Frankel1995} will lead to the conservative results, we make sure that we don't use a period of time without knowing the complete number of events. Determining the completeness of the catalog is very sensitive to the data. Converting earthquake magnitudes from different scales to moment magnitude obviously has some error. Having broader range of magnitude will help to minimize these sort of error. In this study we consider the magnitude intervals for completeness study as $Mw = 1$. 
 
 % \begin{figure*} [!ht]
 % \centering
@@ -30,8 +30,8 @@ According to   \citet{Frankel1995},  we made plots of the cumulative number of e
 % \label{fig:completness_compare_zare_2014_Az_Al}
 % \end{figure*}
 
-\noindent
-Fig.~\ref{fig:comp_test_all_mag} illustrates the completeness of data for each magnitude threshold in five different regions. A uniform rise of cumulative number of earthquake in each magnitude range, defines the threshold for catalog completeness. We define the completeness of each magnitude range at a time which the cumulative number of earthquake increase linearly with time. We assume the catalog for earthquakes with magnitude greater than  7 ($M_w > 7$) is complete from the first historical earthquake report.  Determining the completeness of the catalog for $ 6 < Mw \leq 7 $ needs precise observation of the catalog. In Azerbaijan tectonic seismic region after 1045  $Mw = 6.2$ earthquake the catalog seems complete up to 1318. However, between 1318 and 1581 (263 years) only one earthquake with magnitude $Mw > 6$ is reported (1440,  $Mw = 6.2$ ). Considering the activity of the Azerbaijan region, in this study we assume that the catalog is complete for earthquake with magnitude $ 6 < Mw \leq 7 $ after 1581. Similar situation happened at the period of 1715 - 1833. It worth to mention that in this case, the time period is shorter than before (118 years), meanwhile in this period of time two earthquakes with magnitude $Mw>7$ occurred in the Azerbaijan region (1721 $Mw=7.7$, 1780 $Mw=7.6$). The catalog may or may not be completed after 1045, however in this study we consider 1581 as a completeness threshold for magnitude  $ 6 < Mw \leq 7 $. Considering completeness of the catalog for Azerbaijan region from 1581 will result in conservative PGA for the region in comparison with the model with threshold of 1045. We picked the completeness threshold for other regions and other magnitude ranges according as a year that the cumulative number of earthquakes increment uniformly. Table ~\ref{tab:completeness} shows the summary of values used in this study.
+% \noindent
+% Fig.~\ref{fig:comp_test_all_mag} illustrates the completeness of data for each magnitude threshold in five different regions. A uniform rise of cumulative number of earthquake in each magnitude range, defines the threshold for catalog completeness. We define the completeness of each magnitude range at a time which the cumulative number of earthquake increase linearly with time. We assume the catalog for earthquakes with magnitude greater than  7 ($M_w > 7$) is complete from the first historical earthquake report.  Determining the completeness of the catalog for $ 6 < Mw \leq 7 $ needs precise observation of the catalog. In Azerbaijan tectonic seismic region after 1045  $Mw = 6.2$ earthquake the catalog seems complete up to 1318. However, between 1318 and 1581 (263 years) only one earthquake with magnitude $Mw > 6$ is reported (1440,  $Mw = 6.2$ ). Considering the activity of the Azerbaijan region, in this study we assume that the catalog is complete for earthquake with magnitude $ 6 < Mw \leq 7 $ after 1581. Similar situation happened at the period of 1715 - 1833. It worth to mention that in this case, the time period is shorter than before (118 years), meanwhile in this period of time two earthquakes with magnitude $Mw>7$ occurred in the Azerbaijan region (1721 $Mw=7.7$, 1780 $Mw=7.6$). The catalog may or may not be completed after 1045, however in this study we consider 1581 as a completeness threshold for magnitude  $ 6 < Mw \leq 7 $. Considering completeness of the catalog for Azerbaijan region from 1581 will result in conservative PGA for the region in comparison with the model with threshold of 1045. We picked the completeness threshold for other regions and other magnitude ranges according as a year that the cumulative number of earthquakes increment uniformly. Table ~\ref{tab:completeness} shows the summary of values used in this study.
 
 
 % \begin{figure*} [!ht]
