--- a/parameters.tex
+++ b/parameters.tex
@@ -1,4 +1,19 @@
 
+\begin{figure*}[t]
+    \centering
+    \includegraphics[width=\textwidth]{figures/pdf/figure-06} 
+    \caption{Annual probability of exceedance as a function of earthquake magnitude for the seismic zones in the region of interest. The three curves in red correspond to those seismic zones completely considered within the study area, whereas the ones in blue are the two additional contributing zones from the rest of the country. THe last curve in green corresponds to the complete region of interest, here referred to as the uniform model. The shaded range indicates the models' $\pm 1$ standard deviation.}
+    \label{fig:annualp}
+\end{figure*}
+
+\section{Seismicity Parameters}
+
+Following the general approach described in the previous sections and using the information collected about the seismic catalog and its completeness, we computed the seismicity parameters $a$ and $b$, and the maximum magnitude $M_{\max}$ using the seismic hazard assessment software HA3 (version 3). This software implements the procedures developed by \citet{Kijko_1989_BSSA, Kijko_1992_BSSA}, and subsequent updates by \citet{Kijko_2004_PAG}. HA3 is widely used for this type of computations and is regarded as a reliable tool in seismic hazard analysis \citep[see, for instance,][]{}\textcolor{red}{[references needed]}.
+
+The $a$-value is estimated based on the completeness year, the correlation distance, and the (smoothed) number of events per grid cell. We count events with magnitude $M_w > 3$ and smooth the number of events for each cell. This means each cell has a different $a$-value and thus the result is variable throughout our region of interest. On the other hand, we consider the $b$-value and $M_{\max}$ to be constant within each of the seismic zones in our study area. We compute $b$ and $M_{\max}$ for two different models using the information from the catalog for prehistorical, historical, and instrumental seismicity and the computed values of $M_c$. In the first model we obtain these parameters independently for each one of the five seismic zones influencing the hazard in northern Iran. That is, we obtain distinct values of $b$ and $M_{\max}$ for the main northern seismic zones of Azerbaijan, Alborz, and Kopeh Dagh, as well as for the portions of the Zagros and Central-East seismic zones contributing to our region of interest (see Fig.~\ref{fig:iran} for reference). 
+
+In the second model we consider the whole study area as a uniform seismic zone. Admittedly, this assumption is unrealistic if considered from the point of view that different seismic zones have different seismicity parameters. Nonetheless, computing results for this uniform model is useful for the analysis of results and comparisons with other studies. Table \ref{tab:params} shows the parameters $b$ and $M_{\max}$ obtained with HA3 for the five seismic zones and the uniform regional model, along with the observed maximum magnitude, $M_{\max}^{\mathrm{obs}}$; and Fig.~\ref{fig:annualp} shows the annual probability of exceedance as a function of earthquake magnitude.
+
 \begin{table}[t]
     \centering
     \caption{Seismicity parameters $b$ and $M_{\max}$ computed for the seismic zones in our region of interest and the reference uniform seismicity model along with the observed maximum magnitude, $M_{\max}^{\mathrm{obs}}$.}
@@ -16,21 +31,6 @@
     \end{tabular}
     \label{tab:params} 
 \end{table}
-
-\begin{figure*}[t]
-    \centering
-    \includegraphics[width=\textwidth]{figures/pdf/figure-06} 
-    \caption{Annual probability of exceedance as a function of earthquake magnitude for the seismic zones in the region of interest. The three curves in red correspond to those seismic zones completely considered within the study area, whereas the ones in blue are the two additional contributing zones from the rest of the country. THe last curve in green corresponds to the complete region of interest, here referred to as the uniform model. The shaded range indicates the models' $\pm 1$ standard deviation.}
-    \label{fig:annualp}
-\end{figure*}
-
-\section{Seismicity Parameters}
-
-Following the general approach described in the previous section and using the infrmation collected about the seismic catalog and its completeness, we computed the seismicity parameters $a$ and $b$, and the maximum magnitude $M_{\max}$ using the seismic hazard assessment software HA3 (version 3). This software implements the procedures developed by \citet{Kijko_1989_BSSA, Kijko_1992_BSSA}, and \citet{Kijko_2004_PAG}. HA3 is widely used for this type of computations and is regarded as a reliable tool in seismic hazard analysis \citep[see, for instance,][]{}\textcolor{red}{[references needed]}.
-
-As mentioned before, the $a$-value is estimated based on the smoothed number of events ($M \geq 3$) per grid cell, and thus is variable throughout our region of interest. On the other hand, we consider the $b$-value and $M_{\max}$ to be constant within a given seismic zone. In this study we compute values for two different models. In the first model we obtain these parameters independently for each one of the seismic zones influencing the seismic hazard of northern Iran. That means we obtain distinct values of $b$ and $M_{\max}$ for Azerbaijan, Alborz, and Kopeh Dagh, which are our main seismic zones in northern Iran, as well as for the portions of the Zagros and Central-East seismic zones within our region of interest (see Fig.~\ref{fig:iran} for reference). In the second model we consider the whole region of interest as a uniform seismic zone. Admittedly, the second model is somewhat unrealistic if considered from the point of view that different seismic zones have different seismicity parameters. We thought, however, that computing results for a uniform model was useful for the analysis of results and comparisons with other studies.
-
-Table \ref{tab:params} shows the parameters $b$ and $M_{\max}$ obtained using HA3 for the five seismic zones in our region of interest and for the uniform regional model, along with the observed maximum magnitude, $M_{\max}^{\mathrm{obs}}$. Fig.~\ref{fig:annualp} shows the obtained annual probability of exceedance as a function of earthquake magnitude.
 
 % *********************************************************************************************************************
 % OLD
