touches on completeness

--- a/hazard.tex
+++ b/hazard.tex
@@ -17,7 +17,7 @@ In this study we use the smoothed seismicity method introduced by \citet{Frankel
 In this study we discretize the region of interest into a regular grid with cells of size 0.1\textdegree{} $\times$ 0.1\textdegree{} (in longitude and latitude). The parameter $a$ for each cell is obtained based on the information in the seismic catalog described in the previous section. Following \citet{Frankel1995}, $n_i$ is smoothed using the normalized Gaussian function
 % 
 \begin{equation}
-	\tilde{n_i} = \frac
+	\tilde{n}_i = \frac
 		{ \sum_{j} n_{j} \exp ( \frac{ -\Delta_{ij}^{2} }{ c^2 } ) }
 		{ \sum_{j} \exp ( \frac{ -\Delta_{ij}^{2} }{ c^2 } ) }
 	\, ,
