--- a/completeness.tex
+++ b/completeness.tex
@@ -9,7 +9,7 @@
 
 An important aspect of seismic catalogs is their completeness. This characteristic is measured in terms of the year of completeness and the completeness magnitude, which are used as parameters in the seismic analysis process. In simple terms, the year of completeness is the point in time at which catalog data exhibits a steady rate of event occurrence or record accumulation. This point is typically identified for different magnitude ranges. A simple approach used by \citet{Frankel1995} and others is to select the year at which a plot of the cumulative number of events with respect to time becomes (or starts to resemble) a straight line.
 
-On the other hand, The completeness magnitude, denoted as $M_c$, is the minimum magnitude at which the seismic catalog of a region can be considered complete within a certain time period. While the year of completeness can be determined by inspection of the data, the completeness magnitude often requires a numerical analysis of the catalog. A common approach consists on identifying the magnitude associated with the maximum value of the first derivative of the frequency-magnitude curve. This method is widely used and has been implemented in the ZMAP software package for seismic hazard analysis developed by \citet{Wiemer2001}. \citet{Zare2014}, for instance, used this method to identify $M_c$ values for the different regions of the Middle East.
+On the other hand, the completeness magnitude---denoted as $M_c$---is the minimum magnitude at which the seismic catalog of a region can be considered complete within a certain time period. While the year of completeness can be determined by inspection of the data, the completeness magnitude often requires a numerical analysis of the catalog. A common approach consists on identifying the magnitude associated with the maximum value of the first derivative of the frequency-magnitude curve. This method is known as the maximum curvature (MAXC) technique. It is widely used and has been implemented in the ZMAP software package for seismic hazard analysis developed by \citet{Wiemer2001}. \citet{Zare2014}, for instance, used this software to identify $M_c$ values for the different regions of the Middle East.
 
 One of the difficulties in determining completeness is the availability of data for a period of time long enough for all magnitude ranges, so that selection of completeness parameters is reliable. In this study, we determined the year of completeness for magnitude ranges 3--4, 4--5, 5--6 and 6--7 by inspection, following the approach used by \citet{Frankel1995}. This is illustrated in Fig.~\ref{fig:completeness}, where we show the normalized cumulative number of events with time for each of the seismic zones and magnitude ranges, and indicate our choice of the completeness year thresholds in each case. For events $M_w>7$, in which case there are no sufficient data to determine a proper threshold, we assumed the catalog to be complete from the earliest time at which there is record of large magnitude earthquakes. 
 
